`mkcert -install` should be shown in ddev.com quickstarts (#240)

--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -2,6 +2,7 @@
 import Terminal from "@components/Terminal.astro"
 import Tabs from "@components/Tabs.astro"
 import CommunityCTA from "./CommunityCTA.astro"
+import Examples from "./Examples.astro"
 
 export interface Props {
   latestVersion: string
@@ -13,235 +14,118 @@ const { latestVersion } = Astro.props
 <div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll install Docker and DDEV with your package manager, as detailed in the <a
-      href="https://ddev.readthedocs.io/en/stable/users/install/ddev-installation/"
+      href="https://ddev.readthedocs.io/en/stable/users/install/ddev-installation/#linux"
+      target="_blank"
       >Linux installation docs</a
     >.
   </p>
 
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">1/3</small>Install
+    <small class="block font-mono text-xs text-gray-500">1/4</small>Install
     Docker
   </h2>
 
-  <Tabs order={["Ubuntu", "CentOS", "Debian", "Fedora"]}>
-    <Fragment slot="Ubuntu">
-      <div class="prose py-5 dark:prose-invert">
-        <p>
-          Follow the <a
-            href="https://docs.docker.com/engine/install/ubuntu/"
-            target="_blank"
-            >instructions on docs.docker.com</a
-          >:
-        </p>
-        <Terminal
-          type="ubuntu"
-          code={`$ sudo apt-get update\n$ sudo apt-get install curl docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
-        />
-      </div>
-    </Fragment>
-    <Fragment slot="CentOS">
-      <div class="prose py-5 dark:prose-invert">
-        <p>
-          Follow the <a
-            href="https://docs.docker.com/engine/install/centos/"
-            target="_blank"
-            >instructions on docs.docker.com</a
-          >:
-        </p>
-
-        <Terminal
-          type="ubuntu"
-          code={`$ sudo yum remove docker /\ \n    docker-client /\ \n    docker-client-latest /\ \n    docker-common /\ \n    docker-latest /\ \n    docker-latest-logrotate /\ \n    docker-logrotate /\ \n    docker-engine\n$ sudo yum install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\n$ sudo systemctl start docker`}
-        />
-      </div>
-    </Fragment>
-    <Fragment slot="Debian">
-      <div class="prose py-5 dark:prose-invert">
-        <p>
-          Follow the <a
-            href="https://docs.docker.com/engine/install/debian/"
-            target="_blank"
-            >instructions on docs.docker.com</a
-          >:
-        </p>
-
-        <Terminal
-          type="ubuntu"
-          code={`$ sudo apt-get remove docker docker-engine docker.io containerd runc\n$ sudo apt-get update\n$ sudo apt-get install curl docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
-        />
-      </div>
-    </Fragment>
-    <Fragment slot="Fedora">
-      <div class="prose py-5 dark:prose-invert">
-        <p>
-          Follow the <a
-            href="https://docs.docker.com/engine/install/fedora/"
-            target="_blank"
-            >instructions on docs.docker.com</a
-          >:
-        </p>
-
-        <Terminal
-          type="ubuntu"
-          code={`$ sudo dnf remove docker /\ \n    docker-client /\ \n    docker-client-latest /\ \n    docker-common /\ \n    docker-latest /\ \n    docker-latest-logrotate /\ \n    docker-logrotate /\ \n    docker-selinux /\ \n    docker-engine-selinux /\ \n    docker-engine\n$ sudo dnf install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\n$ sudo systemctl start docker`}
-        />
-      </div>
-    </Fragment>
-  </Tabs>
+  <div class="prose py-5 dark:prose-invert">
+    <p>
+      Docker installation on Linux depends on what flavor you’re using.
+      It’s best to use your native package repository (<code>apt</code>, <code>yum</code>, etc.):
+      <ul>
+        <li><a href="https://docs.docker.com/install/linux/docker-ce/ubuntu/" target="_blank">Ubuntu</a></li>
+        <li><a href="https://docs.docker.com/install/linux/docker-ce/centos/" target="_blank">CentOS</a></li>
+        <li><a href="https://docs.docker.com/install/linux/docker-ce/debian/" target="_blank">Debian</a></li>
+        <li><a href="https://docs.docker.com/install/linux/docker-ce/fedora/" target="_blank">Fedora</a></li>
+        <li><a href="https://docs.docker.com/install/linux/docker-ce/binaries/" target="_blank">binaries</a></li>
+      </ul>
+    </p>
+    <p>
+      Linux installation <strong>absolutely</strong> requires adding your Linux user to the <code>docker</code> group,
+      and configuring the Docker daemon to start at boot.
+      See <a href="https://docs.docker.com/engine/install/linux-postinstall/" target="_blank">Post-installation steps for Linux</a>.
+    </p>
+  </div>
 </div>
 
 <div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
+    <small class="block font-mono text-xs text-gray-500">2/4</small>Install DDEV
   </h2>
 
-  <Tabs order={["Ubuntu", "CentOS", "Debian", "Fedora"]}>
-    <Fragment slot="Ubuntu">
+  <Tabs order={["Debian/Ubuntu","Fedora/CentOS","Arch","Install Script"]}>
+    <Fragment slot="Debian/Ubuntu">
       <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
-          code={`$ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/ddev.gpg > /dev/null\n$ echo "deb [signed-by=/etc/apt/trusted.gpg.d/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list\n$ sudo apt update && sudo apt install -y ddev
+          code={`$ sudo sh -c 'echo ""'
+$ sudo apt-get update && sudo apt-get install -y curl
+$ sudo install -m 0755 -d /etc/apt/keyrings
+$ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/keyrings/ddev.gpg > /dev/null
+$ sudo chmod a+r /etc/apt/keyrings/ddev.gpg
+$ sudo sh -c 'echo ""'
+$ echo "deb [signed-by=/etc/apt/keyrings/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list >/dev/null
+$ sudo sh -c 'echo ""'
+$ sudo apt-get update && sudo apt-get install -y ddev
 `}
         />
       </div>
     </Fragment>
-    <Fragment slot="CentOS">
+    <Fragment slot="Fedora/CentOS">
       <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
-          code={`$ echo '[ddev]\nname=DDEV Repo\nbaseurl=https://pkg.ddev.com/yum/\nenabled=1\ngpgcheck=0' | sudo tee -a /etc/yum.repos.d/ddev.repo\n$ sudo dnf install --refresh ddev`}
-        />
-      </div>
-    </Fragment>
-    <Fragment slot="Debian">
-      <div class="prose py-5 dark:prose-invert">
-        <Terminal
-          type="ubuntu"
-          code={`$ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/ddev.gpg > /dev/null\n$ echo "deb [signed-by=/etc/apt/trusted.gpg.d/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list\n$ sudo apt update && sudo apt install -y ddev
+          code={`$ sudo sh -c 'echo ""'
+$ echo '[ddev]\nname=ddev
+baseurl=https://pkg.ddev.com/yum/
+gpgcheck=0
+enabled=1' | perl -p -e 's/^ +//' | sudo tee /etc/yum.repos.d/ddev.repo >/dev/null
+$ sudo sh -c 'echo ""'
+$ sudo dnf install --refresh ddev
 `}
         />
       </div>
     </Fragment>
-    <Fragment slot="Fedora">
+    <Fragment slot="Arch">
       <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
-          code={`$ echo '[ddev]\nname=DDEV Repo\nbaseurl=https://pkg.ddev.com/yum/\nenabled=1\ngpgcheck=0' | sudo tee -a /etc/yum.repos.d/ddev.repo\n$ sudo dnf install --refresh ddev`}
+          code={`$ yay -S ddev-bin`}
+        />
+      </div>
+    </Fragment>
+    <Fragment slot="Install Script">
+      <div class="prose py-5 dark:prose-invert">
+        <Terminal
+          type="ubuntu"
+          code={`$ curl -fsSL https://ddev.com/install.sh | bash`}
         />
       </div>
     </Fragment>
   </Tabs>
 
-  <p>In the Terminal app, confirm that DDEV is installed: 🎉</p>
+</div>
+
+
+<div class="prose dark:prose-invert">
+  <p>Confirm that you’ve now got DDEV installed: 🎉</p>
   <Terminal type="ubuntu" code={`$ ddev -v\nddev version ${latestVersion}`} />
-</div>
 
-<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
-    Project
+    <small class="block font-mono text-xs text-gray-500">3/4</small>Run <code>mkcert -install</code>
   </h2>
 
-  <p>Navigate to a project you’d like to spin up with DDEV:</p>
-  <Terminal type="ubuntu" code={`$ cd ~/dev/my-project`} />
-
-  <p>
-    Initialize the project by running the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#config"
-      target="_blank"
-      ><code>ddev config</code>
-    </a> command:
-  </p>
-  <Terminal type="ubuntu" code={`$ ddev config`} />
-
-  <p>
-    Start the project for the first time. You’ll use the same command to start
-    it later, too!
-  </p>
-  <Terminal type="ubuntu" code={`$ ddev start`} />
-
-  <p>
-    If it’s a Composer project, you may also need to run <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#composer"
-      target="_blank"
-      ><code>ddev composer install</code>
-    </a>.
-  </p>
-
-  <p>
-    Now run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#launch"
-      target="_blank"
-      >launch command</a
-    > to open your project in a browser:
-  </p>
-  <Terminal type="ubuntu" code={`$ ddev launch`} />
+  <p>Running <code>mkcert -install</code> is a one-time operation. It allows your browser to trust the HTTPS/TLS certificates served by DDEV.</p>
+  <Terminal type="ubuntu" code={`$ mkcert -install
+Created a new local CA 💥
+The local CA is now installed in the system trust store! ⚡️
+The local CA is now installed in the Firefox and/or Chrome/Chromium trust store (requires browser restart)! 🦊`} />
 </div>
 
+<Examples itemNumber="4/4" terminalType="ubuntu" terminalSymbol="$" />
+
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
+  <p></p>
 
   <p>
-    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code
-      >.ddev/ddev.yaml</code
-    > to change <a
-      href="https://ddev.readthedocs.io/en/stable/users/configuration/config/"
-      target="_blank"
-      >project options</a
-    >, or even go about your business and pretend this folder doesn’t exist.
-  </p>
-
-  <p>
-    Run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#help"
-      target="_blank"
-      >help command
-    </a> (or plain <code>ddev</code>) to see the actions you can take with the
-    CLI:
-  </p>
-
-  <Terminal type="ubuntu" code={`$ ddev -h`} />
-
-  <p>
-    Use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#describe"
-      target="_blank"
-      >describe command
-    </a> to see a project’s parts and database connection details:
-  </p>
-
-  <Terminal type="ubuntu" code={`$ ddev describe`} />
-
-  <p>
-    If you’re done working on a project and want to shut it down without
-    removing anything, use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#stop"
-      target="_blank"
-      >stop command
-    </a>:
-  </p>
-
-  <Terminal type="ubuntu" code={`$ ddev stop`} />
-
-  <p>
-    If you were just kicking the tires and you want to permanently delete the
-    project and its resources without touching your code, run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#delete"
-      target="_blank"
-      >delete command
-    </a>:
-  </p>
-
-  <Terminal type="ubuntu" code={`$ ddev delete`} />
-
-  <p>
-    DDEV will remove everything it created for the project and have no memory of
-    its existence.
-  </p>
-
-  <p>
-    To uninstall DDEV, first clean up its Docker bits and delete its files from
+    To <a href="https://ddev.readthedocs.io/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
     your system:
   </p>
 
@@ -251,10 +135,31 @@ const { latestVersion } = Astro.props
   />
 
   <p>
-    Remove the <code>ddev</code> binary:
+    Then remove the <code>ddev</code> binary however you installed it:
   </p>
 
-  <Terminal type="ubuntu" code={`$ sudo rm /usr/local/bin/ddev`} />
+  <Tabs order={["Debian/Ubuntu","Fedora/CentOS","Arch","Install Script"]}>
+    <Fragment slot="Debian/Ubuntu">
+      <div class="prose py-5 dark:prose-invert">
+        <Terminal type="ubuntu" code={`$ sudo apt-get remove ddev`} />
+      </div>
+    </Fragment>
+    <Fragment slot="Fedora/CentOS">
+      <div class="prose py-5 dark:prose-invert">
+        <Terminal type="ubuntu" code={`$ sudo dnf remove ddev`} />
+      </div>
+    </Fragment>
+    <Fragment slot="Arch">
+      <div class="prose py-5 dark:prose-invert">
+        <Terminal type="ubuntu" code={`$ yay -R ddev-bin`} />
+      </div>
+    </Fragment>
+    <Fragment slot="Install Script">
+      <div class="prose py-5 dark:prose-invert">
+        <Terminal type="ubuntu" code={`$ sudo rm /usr/local/bin/ddev`} />
+      </div>
+    </Fragment>
+  </Tabs>
 
   <CommunityCTA />
 </div>
