--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -2,6 +2,7 @@
 import Terminal from "@components/Terminal.astro"
 import Tabs from "@components/Tabs.astro"
 import CommunityCTA from "./CommunityCTA.astro"
+import Examples from "./Examples.astro"
 
 export interface Props {
   latestVersion: string
@@ -12,14 +13,15 @@ const { latestVersion } = Astro.props
 
 <div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
-    We’ll use Orbstack since it’s the most straightforward of <a
+    We’ll use OrbStack since it’s the most straightforward of <a
       href="https://ddev.readthedocs.io/en/stable/users/install/docker-installation/#macos"
+      target="_blank"
       >several options</a
     >.
   </p>
 
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">1/3</small>Install Orbstack Docker Provider
+    <small class="block font-mono text-xs text-gray-500">1/4</small>Install OrbStack Docker Provider
   </h2>
 </div>
 
@@ -28,7 +30,7 @@ const { latestVersion } = Astro.props
     <div class="prose py-5 dark:prose-invert">
       <p>
         With <a href="https://brew.sh" target="_blank">Homebrew</a> installed, you
-        can install Orbstack with one command:
+        can install OrbStack with one command:
       </p>
       <Terminal code={`→ brew install orbstack docker`} />
     </div>
@@ -38,7 +40,7 @@ const { latestVersion } = Astro.props
       <p>
         Download and run the <a
           href="https://orbstack.dev/download"
-          target="_blank">Orbstack installer</a
+          target="_blank">OrbStack installer</a
         >.
       </p>
     </div>
@@ -47,14 +49,14 @@ const { latestVersion } = Astro.props
 
 <div class="prose dark:prose-invert">
   <p>
-    Launch Orbstack, accept the license agreement.
+    Launch OrbStack, accept the license agreement.
   </p>
 
   <p>Confirm that you now have a Docker provider:</p>
   <Terminal code={`→ docker version`} />
 
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
+    <small class="block font-mono text-xs text-gray-500">2/4</small>Install DDEV
   </h2>
 </div>
 
@@ -73,114 +75,30 @@ const { latestVersion } = Astro.props
   </Fragment>
 </Tabs>
 
+
 <div class="prose dark:prose-invert">
   <p>Confirm that you’ve now got DDEV installed: 🎉</p>
   <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
 
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
-    Project
+    <small class="block font-mono text-xs text-gray-500">3/4</small>Run <code>mkcert -install</code>
   </h2>
 
-  <p>Navigate to a project you’d like to spin up with DDEV:</p>
-  <Terminal code={`→ cd ~/dev/my-project`} />
-
-  <p>
-    Initialize the project by running the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#config"
-      target="_blank"
-      ><code>ddev config</code>
-    </a> command:
-  </p>
-  <Terminal code={`→ ddev config`} />
-
-  <p>
-    Start the project for the first time. You’ll use the same command to start
-    it later, too!
-  </p>
-  <Terminal code={`→ ddev start`} />
-
-  <p>
-    If it’s a Composer project, you may also need to run <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#composer"
-      target="_blank"
-      ><code>ddev composer install</code>
-    </a>.
-  </p>
-
-  <p>
-    Now run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#launch"
-      target="_blank">launch command</a
-    > to open your project in a browser:
-  </p>
-  <Terminal code={`→ ddev launch`} />
+  <p>Running <code>mkcert -install</code> is a one-time operation. It allows your browser to trust the HTTPS/TLS certificates served by DDEV.</p>
+  <Terminal code={`→ mkcert -install
+Created a new local CA 💥
+Sudo password:
+The local CA is now installed in the system trust store! ⚡️
+The local CA is now installed in the Firefox trust store (requires browser restart)! 🦊`} />
 </div>
 
+<Examples itemNumber="4/4" terminalType="default" terminalSymbol="→" />
+
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
+  <p></p>
 
   <p>
-    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code
-      >.ddev/ddev.yaml</code
-    > to change <a
-      href="https://ddev.readthedocs.io/en/stable/users/configuration/config/"
-      target="_blank"
-      >project options</a
-    >, or even go about your business and pretend this folder doesn’t exist.
-  </p>
-
-  <p>
-    Run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#help"
-      target="_blank"
-      >help command
-    </a> (or plain <code>ddev</code>) to see the actions you can take with the
-    CLI:
-  </p>
-
-  <Terminal code={`→ ddev -h`} />
-
-  <p>
-    Use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#describe"
-      target="_blank"
-      >describe command
-    </a> to see a project’s parts and database connection details:
-  </p>
-
-  <Terminal code={`→ ddev describe`} />
-
-  <p>
-    If you’re done working on a project and want to shut it down without
-    removing anything, use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#stop"
-      target="_blank"
-      >stop command
-    </a>:
-  </p>
-
-  <Terminal code={`→ ddev stop`} />
-
-  <p>
-    If you were just kicking the tires and you want to permanently delete the
-    project and its resources without touching your code, run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#delete"
-      target="_blank"
-      >delete command
-    </a>:
-  </p>
-
-  <Terminal code={`→ ddev delete`} />
-
-  <p>
-    DDEV will remove everything it created for the project and have no memory of
-    its existence.
-  </p>
-
-  <p>
-    To uninstall DDEV, first clean up its Docker bits and delete its files from
+    To <a href="https://ddev.readthedocs.io/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
     your system:
   </p>
 
@@ -189,7 +107,7 @@ const { latestVersion } = Astro.props
   />
 
   <p>
-    Then remove the <codes>ddev</code> binary however you installed it:
+    Then remove the <code>ddev</code> binary however you installed it:
   </p>
 
   <Tabs order={["Homebrew", "Install Script"]}>
