fix NaN if GITHUB_TOKEN is not set

--- a/src/components/RepoCard.astro
+++ b/src/components/RepoCard.astro
@@ -28,7 +28,7 @@ const repoData = await getRepoDetails(name)
           className="w-4 h-4 inline-block relative"
           style={{ top: "-1px" }}
         />{" "}
-        {parseInt(repoData.stargazers_count).toLocaleString("en-US")}
+        {parseInt(repoData.stargazers_count || 0).toLocaleString("en-US")}
       </div>
     </div>
     <p class="mt-2 text-sm opacity-60 px-3 pt-1 pb-4">
