Makes the hero wider so it does not look tiny on larger screens, same with the footer and provides more space to the hero.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -56,7 +56,7 @@ const navigation = {
 ---
 
 <footer class="dark:bg-transparent">
-  <div class="max-w-4xl mx-auto py-12 px-6 lg:px-0 lg:py-16">
+  <div class="max-w-7xl mx-auto p-8">
     <div class="pb-8 xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="grid grid-cols-auto gap-8 xl:col-span-4">
         <div class="md:grid md:grid-cols-4 md:gap-8">
