--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -64,7 +64,7 @@ import {
 
 <header class="w-full p-8">
   <nav
-    class="flex justify-between items-center content-center max-w-4xl mx-auto"
+    class="flex justify-between items-center content-center"
     aria-label="Main"
   >
     <a href="/" class="relative block cursor-pointer -ml-2">
