--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
 ---
 
 <div class="mt-2 pt-8 sm:mt-12 sm:pt-24 pb-32 relative overflow-x-hidden">
-  <div class="z-10 max-w-4xl mx-auto relative">
+  <div class="z-10 sm:max-w-4xl max-w-7xl mx-auto relative">
     <div class="max-w-2xl px-6 lg:px-0">
       <h1 class="text-5xl font-bold dark:text-white">
         Docker-based PHP development environments.
