Bmartinez suggestion for line
Co-authored-by: Bernardo Martinez <39039024+bmartinez287@users.noreply.github.com>

--- a/src/components/FeaturedSponsors.astro
+++ b/src/components/FeaturedSponsors.astro
@@ -33,7 +33,7 @@ regularSponsors.map((sponsor) => {
 <div class="relative flex flex-col items-center space-y-12">
   {/* Lead Sponsors Section */}
   {leadSponsors.length > 0 && (
-      <div class="w-full flex justify-center pb-8 border-b border-gray-200 dark:border-gray-800">
+      <div class="w-full flex justify-center pb-8 border-b border-gray-200 dark:border-white">
         {leadSponsors.map((sponsor) => (
             <a
                 class="block relative overflow-hidden cursor-pointer h-16 mx-6"
