Fixes bluesky logo.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -136,7 +136,7 @@ const navigation = {
               href={item.href}
               target="_blank"
               class={`text-gray-500 hover:text-black ${
-                ["Discord", "X"].includes(item.name) ? `w-5` : `w-6`
+                ["Discord", "Bluesky"].includes(item.name) ? `w-5` : `w-6`
               }`}
               rel={item.hasOwnProperty('me') && item.me ? 'me' : null}
             >
