Add note stating OrbStack is not free for professional use

--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -17,7 +17,7 @@ const { latestVersion } = Astro.props
       href="https://ddev.readthedocs.io/en/stable/users/install/docker-installation/#macos"
       target="_blank"
       >several options</a
-    >.
+    >. Please note that OrbStack is not free for professional use.
   </p>
 
   <h2 class="text-3xl mt-24">
