--- a/src/pages/blog/author/[id].astro
+++ b/src/pages/blog/author/[id].astro
@@ -1,10 +1,10 @@
 ---
-import { getCollection } from "astro:content"
+import { getCollection, render } from "astro:content"
 import Layout from "../../../layouts/Layout.astro"
 import BlogPostCard from "../../../components/BlogPostCard.astro"
 
 /**
- * Tell Astro to build routes using our author slugs.
+ * Tell Astro to build routes using our author ids.
  * https://docs.astro.build/en/reference/api-reference/#getstaticpaths
  */
 export async function getStaticPaths() {
@@ -19,7 +19,7 @@ export async function getStaticPaths() {
       })
 
     return {
-      params: { slug: author.slug },
+      params: { id: author.id },
       props: {
         author: author,
         posts: authorPosts,
@@ -31,7 +31,7 @@ export async function getStaticPaths() {
 const { author, posts } = Astro.props
 
 const title = `Posts by ${author.data.name}`
-const { Content } = await author.render()
+const { Content } = await render(author)
 ---
 
 <Layout
