--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -46,8 +46,7 @@ const title = `DDEV Foundation`
 
           {ORG_NAME}<br />
           {ORG_STREET}<br />
-          {ORG_CITY}, {ORG_STATE_ABBR}&nbsp;{ORG_POSTAL_CODE}<br />
-          {ORG_COUNTRY}<br />
+          {ORG_CITY}, {ORG_STATE_ABBR}&nbsp;{ORG_POSTAL_CODE}&nbsp; {ORG_COUNTRY}<br />
           {ORG_PHONE}<br />
 
           <h2>Colorado nonprofit corporation registration</h2>
