--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -13,11 +13,11 @@ const { latestVersion } = Astro.props
 
 <div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
-    We’ll use OrbStack since it’s the most straightforward of <a
+    We’ll use OrbStack since it’s the simplest of <a
       href="https://ddev.readthedocs.io/en/stable/users/install/docker-installation/#macos"
       target="_blank"
       >several options</a
-    >.
+    >. OrbStack is not free for professional use, but several other options are open-source and free to use.
   </p>
 
   <h2 class="text-3xl mt-24">
@@ -77,7 +77,7 @@ const { latestVersion } = Astro.props
 
 
 <div class="prose dark:prose-invert">
-  <p>Confirm that you’ve now got DDEV installed: 🎉</p>
+  <p>Confirm that DDEV is installed: 🎉</p>
   <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
 
   <h2 class="text-3xl mt-24">
