--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -54,7 +54,7 @@ const title = `Support DDEV`
 
         <Image
           src="/img/pr.png"
-          alt="Screenshot of GitHub PR #217, where @beeradb added new version notifications"
+          alt="Screenshot of GitHub PR #6848, where @gitressa added database management examples"
           class="rounded-lg"
           width={600}
           height={400}
