--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -53,13 +53,13 @@ import {
 </script>
 
 <style type="postcss">
-  .menu {
+  /* .menu {
     @apply hidden absolute top-0 right-0 max-w-full bg-white px-8 py-4 z-30 text-center shadow-2xl rounded-lg m-3 dark:bg-slate-800 dark:text-white;
 
     &.open {
       @apply block;
     }
-  }
+  } */
 </style>
 
 <header class="w-full p-8">
